# KafkaManager

./: requirements.txt  setup.cfg
src/austin_heller_repo/: kafka_manager.py
src/kafka_manager_austinhellerrepo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: kafka_manager_test.py
