[metadata]
name = kafka-manager-austinhellerrepo
version = 0.0.8
author = Austin Heller
description = A basic wrapper of Kafka functionality
url = https://github.com/AustinHellerRepo/KafkaManager
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  confluent-kafka

[options.packages.find]
where = src
