[metadata]
name = kafka-manager-austinhellerrepo
version = 0.3.7
author = Austin Heller
description = A basic wrapper of Kafka functionality
url = https://github.com/AustinHellerRepo/KafkaManager
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  confluent-kafka
  threading-austinhellerrepo@git+https://github.com/AustinHellerRepo/Threading
  common-austinhellerrepo@git+https://github.com/AustinHellerRepo/Common

[options.packages.find]
where = src
